--- a/templates/about.html
+++ b/templates/about.html
@@ -16,8 +16,8 @@
   <title>Spering</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
+  <link href="{% static 'https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="{% static 'css/style.css ' %}" rel="stylesheet" />
   <!-- responsive style -->
@@ -96,7 +96,7 @@
       <div class="row">
         <div class="col-md-5">
           <div class="img-box">
-            <img src="{% static ' images/experience-img.jpg" alt="">
+            <img src="{% static ' images/experience-img.jpg' %}" alt="">
           </div>
         </div>
         <div class="col-md-7">
@@ -134,7 +134,7 @@
       <div class="row">
         <div class="col-md-10 col-lg-9 mx-auto">
           <div class="img-box">
-            <img src="{% static ' images/about-img.jpg" alt="">
+            <img src="{% static ' images/about-img.jpg' %}" alt="">
           </div>
         </div>
       </div>
