--- a/templates/category.html
+++ b/templates/category.html
@@ -16,9 +16,9 @@
   <title>Spering</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
 
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+  <link href="{% static 'https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="{% static 'css/style.css ' %}" rel="stylesheet" />
   <!-- responsive style -->
@@ -213,7 +213,7 @@
                     <a class="" href="{% url 'work_html' %} ">Work </a>
                   </li>
                   <li class="">
-                    <a class="" href="category.html">Category </a>
+                    <a class="" href="{% url 'category_html' %}">Category </a>
                   </li>
                 </ul>
               </div>
