--- a/templates/work.html
+++ b/templates/work.html
@@ -16,9 +16,9 @@
   <title>Spering</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
 
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+  <link href="{% static 'https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap' %}" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="{% static 'css/style.css ' %}" rel="stylesheet" />
   <!-- responsive style -->
@@ -163,22 +163,22 @@
           <div class="col-md-6">
             <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="img-box">
-                <img src="{% static ' images/freelance-img.jpg" alt="">
+                <img src="{% static ' images/freelance-img.jpg' %}" alt="">
               </div>
             </div>
             <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="img-box">
-                <img src="{% static ' images/freelance-img.jpg" alt="">
+                <img src="{% static ' images/freelance-img.jpg' %}" alt="">
               </div>
             </div>
             <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="img-box">
-                <img src="{% static ' images/freelance-img.jpg" alt="">
+                <img src="{% static ' images/freelance-img.jpg' %}" alt="">
               </div>
             </div>
             <div class="collapse" id="collapseFour" aria-labelledby="headingfour" data-parent="#accordion">
               <div class="img-box">
-                <img src="{% static ' images/freelance-img.jpg" alt="">
+                <img src="{% static ' images/freelance-img.jpg' %}" alt="">
               </div>
             </div>
           </div>
